Co-authored-by: SeanD4 <SeanD4@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </div>
       <p class="disclaimer">Made With Precision By VTD All Rights Reserved</p>
     </footer>
-
+<!-- On dev branch -->
     <script src="/main.js"></script>
   </body>
 </html>
