--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/public/reset.css" />
     <link rel="stylesheet" href="/public/styles.css" />
   </head>
 
   <body>
-    <header class="header__wrapper">
+    <main class="container">
+      <!-- Start Header -->
+    <header class="container header__wrapper">
       <div class="header__logo">BrandName</div>
       <nav class="header__menu-items__wrapper">
         <ul class="header__menu-items">
@@ -38,12 +41,84 @@
         <button class="header__button-member">Become a member -></button>
       </div>
     </header>
+    <!-- End Header -->
 
-    <div style="height: 500px"></div>
+    <!-- Start Hero -->
+    <section class="hero__wrapper">
+      <div class="hero__text-wrapper">
+        <h1 class="hero__heading">Creating a Beautiful & Useful Solutions</h1>
+        <p class="hero__text">
+          We know how large objects will act, but things on a small scale just
+          do not act that way.
+        </p>
+        <div class="hero__button-wrapper">
+          <button class="hero__button-quote">Get Quote Now</button>
+          <button class="hero__button-learn">Learn More</button>
+        </div>
+      </div>
+    </section>
+    <!-- End Hero -->
 
+    <!-- Clients Start -->
+    <section class="client__wrapper">
+      <div class="client__heading-wrapper">
+        <h2 class="client__heading">What Clients Say</h2>
+        <p class="client__text">
+          Problems trying to resolve the conflict between the two major realms
+          of Classical physics: Newtonian mechanics
+        </p>
+      </div>
+      <div class="client__cards-wrapper">
+        <div class="client__cards">
+          <img
+            src="/public/images/woman.png"
+            alt="Woman image"
+            class="client-image"
+          />
+          <div class="client__card-text__wrapper">
+            <h3 class="client__name">Regina Miles</h3>
+            <p class="client__title">Designer</p>
+            <div class="client__rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fa-regular fa-star"></i>
+            </div>
+            <p class="client__feedback">
+              This proved to be impossible using concepts of space and time.
+              Einstein new view of time first and then
+            </p>
+          </div>
+        </div>
+
+        <div class="client__cards">
+          <img src="/public/images/man.png" alt="" class="client-image" />
+          <div class="client__card-text__wrapper">
+            <h3 class="client__name">Regina Miles</h3>
+            <p class="client__title">Designer</p>
+            <div class="client__rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fa-regular fa-star"></i>
+            </div>
+            <p class="client__feedback">
+              This proved to be impossible using concepts of space and time.
+              Einstein new view of time first and then
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Clients End -->
+
+    <!-- Start Footer -->
     <footer>
       <div class="footer__heading">
-        <h1 class="footer__heading-brand">BrandName</h1>
+        <h6 class="footer__heading-brand">BrandName</h6>
         <ul class="footer__heading-icons__wrapper">
           <li class="footer__heading-icon">
             <i class="fa-brands fa-facebook"></i>
@@ -113,9 +188,12 @@
           </p>
         </div>
       </div>
-      <p class="disclaimer">Made With Precision By VTD  All Rights Reserved</p>
+      <p class="disclaimer">Made With Precision By VTD All Rights Reserved</p>
     </footer>
+    <!-- End Footer -->
 
+    </main>
+    
     <script src="/main.js"></script>
   </body>
 </html>
