Added Fixed header with background chang with scroll

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <main class="container">
       <!-- Start Header -->
-    <header class="container header__wrapper">
+    <header class="header__wrapper">
       <div class="header__logo">BrandName</div>
       <nav class="header__menu-items__wrapper">
         <ul class="header__menu-items">
@@ -194,6 +194,6 @@
 
     </main>
     
-    <script src="/main.js"></script>
+    <script src="/public/main.js"></script>
   </body>
 </html>
