--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/public/reset.css" />
     <link rel="stylesheet" href="/public/styles.css" />
   </head>
@@ -26,174 +31,281 @@
   <body>
     <main class="container">
       <!-- Start Header -->
-    <header class="header__wrapper">
-      <div class="header__logo">BrandName</div>
-      <nav class="header__menu-items__wrapper">
-        <ul class="header__menu-items">
-          <li class="header__menu-item">Home</li>
-          <li class="header__menu-item">Product</li>
-          <li class="header__menu-item">Pricing</li>
-          <li class="header__menu-item">Contact</li>
-        </ul>
-      </nav>
-      <div class="header__button-wrapper">
-        <a href="#" class="header__button-login">Login</a>
-        <button class="header__button-member">Become a member -></button>
-      </div>
-    </header>
-    <!-- End Header -->
-
-    <!-- Start Hero -->
-    <section class="hero__wrapper">
-      <div class="hero__text-wrapper">
-        <h1 class="hero__heading">Creating a Beautiful & Useful Solutions</h1>
-        <p class="hero__text">
-          We know how large objects will act, but things on a small scale just
-          do not act that way.
-        </p>
-        <div class="hero__button-wrapper">
-          <button class="hero__button-quote">Get Quote Now</button>
-          <button class="hero__button-learn">Learn More</button>
+      <header class="header__wrapper">
+        <div class="header__logo">BrandName</div>
+        <nav class="header__menu-items__wrapper">
+          <ul class="header__menu-items">
+            <li class="header__menu-item">Home</li>
+            <li class="header__menu-item">Product</li>
+            <li class="header__menu-item">Pricing</li>
+            <li class="header__menu-item">Contact</li>
+          </ul>
+        </nav>
+        <div class="header__button-wrapper">
+          <a href="#" class="header__button-login">Login</a>
+          <button class="header__button-member">Become a member -></button>
         </div>
-      </div>
-    </section>
-    <!-- End Hero -->
+      </header>
+      <!-- End Header -->
 
-    <!-- Clients Start -->
-    <section class="client__wrapper">
-      <div class="client__heading-wrapper">
-        <h2 class="client__heading">What Clients Say</h2>
-        <p class="client__text">
-          Problems trying to resolve the conflict between the two major realms
-          of Classical physics: Newtonian mechanics
-        </p>
-      </div>
-      <div class="client__cards-wrapper">
-        <div class="client__cards">
-          <img
-            src="/public/images/woman.png"
-            alt="Woman image"
-            class="client-image"
-          />
-          <div class="client__card-text__wrapper">
-            <h3 class="client__name">Regina Miles</h3>
-            <p class="client__title">Designer</p>
-            <div class="client__rating">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-            </div>
-            <p class="client__feedback">
-              This proved to be impossible using concepts of space and time.
-              Einstein new view of time first and then
-            </p>
+      <!-- Start Hero -->
+      <section class="hero__wrapper">
+        <div class="hero__text-wrapper">
+          <h1 class="hero__heading">Creating a Beautiful & Useful Solutions</h1>
+          <p class="hero__text">
+            We know how large objects will act, but things on a small scale just
+            do not act that way.
+          </p>
+          <div class="hero__button-wrapper">
+            <button class="hero__button-quote">Get Quote Now</button>
+            <button class="hero__button-learn">Learn More</button>
           </div>
         </div>
+      </section>
+      <!-- End Hero -->
 
-        <div class="client__cards">
-          <img src="/public/images/man.png" alt="" class="client-image" />
-          <div class="client__card-text__wrapper">
-            <h3 class="client__name">Regina Miles</h3>
-            <p class="client__title">Designer</p>
-            <div class="client__rating">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fa-regular fa-star"></i>
-            </div>
-            <p class="client__feedback">
-              This proved to be impossible using concepts of space and time.
-              Einstein new view of time first and then
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Clients End -->
-
-    <!-- Start Footer -->
-    <footer>
-      <div class="footer__heading">
-        <h6 class="footer__heading-brand">BrandName</h6>
-        <ul class="footer__heading-icons__wrapper">
-          <li class="footer__heading-icon">
-            <i class="fa-brands fa-facebook"></i>
-          </li>
-          <li class="footer__heading-icon">
-            <i class="fa-brands fa-instagram"></i>
-          </li>
-          <li class="footer__heading-icon">
-            <i class="fa-brands fa-twitter"></i>
-          </li>
-        </ul>
-      </div>
-
-      <hr class="footer__line" />
-      <div class="footer__menu__wrapper">
-        <div class="footer__menu-items__wrapper">
-          <h6>Company Info</h6>
-          <ul class="footer__menu-lists">
-            <li class="footer__menu-lists__items">About Us</li>
-            <li class="footer__menu-lists__items">Carrier</li>
-            <li class="footer__menu-lists__items">We are hiring</li>
-            <li class="footer__menu-lists__items">Blog</li>
-          </ul>
-        </div>
-        <div class="footer__menu-items__wrapper">
-          <h6>Legal</h6>
-          <ul class="footer__menu-lists">
-            <li class="footer__menu-lists__items">About Us</li>
-            <li class="footer__menu-lists__items">Carrier</li>
-            <li class="footer__menu-lists__items">We are hiring</li>
-            <li class="footer__menu-lists__items">Blog</li>
-          </ul>
-        </div>
-        <div class="footer__menu-items__wrapper">
-          <h6>Features</h6>
-          <ul class="footer__menu-lists">
-            <li class="footer__menu-lists__items">Business Marketing</li>
-            <li class="footer__menu-lists__items">User Analytic</li>
-            <li class="footer__menu-lists__items">Live Chat</li>
-            <li class="footer__menu-lists__items">Unlimited Support</li>
-          </ul>
-        </div>
-        <div class="footer__menu-items__wrapper">
-          <h6>Resources</h6>
-          <ul class="footer__menu-lists">
-            <li class="footer__menu-lists__items">IOS & Android</li>
-            <li class="footer__menu-lists__items">Watch a Demo</li>
-            <li class="footer__menu-lists__items">Customers</li>
-            <li class="footer__menu-lists__items">API</li>
-          </ul>
-        </div>
-        <div class="footer__menu-items__wrapper">
-          <h6>Get in Touch</h6>
-          <form class="footer__menu-form">
-            <input
-              type="email"
-              placeholder="Your Email"
-              class="footer__menu-form__input"
-            />
-            <button type="button" class="footer__menu-form__button">
-              Subscribe
-            </button>
-          </form>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem
-            quaerat, illo
+      <!-- Start Services -->
+      <section class="services__wrapper">
+        <div class="services__heading-wrapper">
+          <h1 class="services__heading">
+            Better Strategy With Quality Business
+          </h1>
+          <p class="services__subHeading">
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
           </p>
         </div>
-      </div>
-      <p class="disclaimer">Made With Precision By VTD All Rights Reserved</p>
-    </footer>
-    <!-- End Footer -->
+        <div class="services__cards-wrapper">
+          <div class="services__card-wrapper">
+            <img src="/public/images/users.png" alt="Services Icon" />
+            <div class="services__card-text__wrapper">
+              <h1 class="services__card-header">Investment Trading</h1>
+              <p class="services__card-text">
+                the quick fox jumps over the lazy dog
+              </p>
+            </div>
+          </div>
+          <div class="services__card-wrapper">.
+            
+            <img src="/public/images/users.png" alt="Services Icon" />
+            <div class="services__card-text__wrapper">
+              <h1 class="services__card-header">Raising Funds</h1>
+              <p class="services__card-text">
+                the quick fox jumps over the lazy dog
+              </p>
+            </div>
+          </div>
+          <div class="services__card-wrapper">
+            <img src="/public/images/users.png" alt="Services Icon" />
+            <div class="services__card-text__wrapper">
+              <h1 class="services__card-header">Financial Analysis</h1>
+              <p class="services__card-text">
+                the quick fox jumps over the lazy dog
+              </p>
+            </div>
+          </div>
+          <div class="services__card-wrapper">
+            <img src="/public/images/users.png" alt="Services Icon" />
+            <div class="services__card-text__wrapper">
+              <h1 class="services__card-header">Taxation Planning</h1>
+              <p class="services__card-text">
+                the quick fox jumps over the lazy dog
+              </p>
+            </div>
+          </div>
+          <div class="services__card-wrapper">
+            <img src="/public/images/users.png" alt="Services Icon" />
+            <div class="services__card-text__wrapper">
+              <h1 class="services__card-header">Save money and time</h1>
+              <p class="services__card-text">
+                the quick fox jumps over the lazy dog
+              </p>
+            </div>
+          </div>
+          <div class="services__card-wrapper">
+            <img src="/public/images/users.png" alt="Services Icon" />
+            <div class="services__card-text__wrapper">
+              <h1 class="services__card-header">Outsourced Consulting</h1>
+              <p class="services__card-text">
+                the quick fox jumps over the lazy dog
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Services -->
 
+      <!-- Clients Start -->
+      <section class="client__wrapper">
+        <div class="client__heading-wrapper">
+          <h2 class="client__heading">What Clients Say</h2>
+          <p class="client__text">
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
+          </p>
+        </div>
+        <div class="client__cards-wrapper">
+          <div class="client__cards">
+            <img
+              src="/public/images/woman.png"
+              alt="Woman image"
+              class="client-image"
+            />
+            <div class="client__card-text__wrapper">
+              <h3 class="client__name">Regina Miles</h3>
+              <p class="client__title">Designer</p>
+              <div class="client__rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+              </div>
+              <p class="client__feedback">
+                This proved to be impossible using concepts of space and time.
+                Einstein new view of time first and then
+              </p>
+            </div>
+          </div>
+
+          <div class="client__cards">
+            <img src="/public/images/man.png" alt="" class="client-image" />
+            <div class="client__card-text__wrapper">
+              <h3 class="client__name">Regina Miles</h3>
+              <p class="client__title">Designer</p>
+              <div class="client__rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+              </div>
+              <p class="client__feedback">
+                This proved to be impossible using concepts of space and time.
+                Einstein new view of time first and then
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Clients End -->
+
+      <!-- Pricing Start -->
+      <section class="pricing__wrapper">
+        <div class="pricing__heading-wrapper">
+          <h2 class="pricing__header">Pricing</h2>
+          <p class="pricing__text">Problems trying to resolve the conflict between 
+            the two major realms of Classical physics: Newtonian mechanics </p>
+        </div>
+        <div class="pricing__cards-wrapper">
+          <div class="pricing__card-wrapper">
+            <span class="pricing__card-badge">new</span>
+            <h3 class="pricing__card-heading">FREE</h3>
+            <p class="pricing__card-description">Organize accross all apps by hand</p>
+            <h2 class="pricing__card-price">0$</h2>
+            <p class="pricing__card-price__tag">Per Month</p>
+            <button type="button" class="pricing__card-button">Try it for free</button>
+            <ul class="pricing__features__wrapper">
+                <li class="pricing__features">
+                  Ulimited product updates
+                </li>
+                <li class="pricing__features">
+                 Unlimited Product updates
+                </li>
+                <li class="pricing__features">
+                  Ulimited product updates
+                </li>
+                <li class="pricing__features">
+                  1GB Cloud Storage
+                </li>
+                <li class="pricing__features">
+                  Email and community support
+                </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <!-- Pricing End -->
+
+      <!-- Start Footer -->
+      <footer>
+        <div class="footer__heading">
+          <h6 class="footer__heading-brand">BrandName</h6>
+          <ul class="footer__heading-icons__wrapper">
+            <li class="footer__heading-icon">
+              <i class="fa-brands fa-facebook"></i>
+            </li>
+            <li class="footer__heading-icon">
+              <i class="fa-brands fa-instagram"></i>
+            </li>
+            <li class="footer__heading-icon">
+              <i class="fa-brands fa-twitter"></i>
+            </li>
+          </ul>
+        </div>
+
+        <hr class="footer__line" />
+        <div class="footer__menu__wrapper">
+          <div class="footer__menu-items__wrapper">
+            <h6>Company Info</h6>
+            <ul class="footer__menu-lists">
+              <li class="footer__menu-lists__items">About Us</li>
+              <li class="footer__menu-lists__items">Carrier</li>
+              <li class="footer__menu-lists__items">We are hiring</li>
+              <li class="footer__menu-lists__items">Blog</li>
+            </ul>
+          </div>
+          <div class="footer__menu-items__wrapper">
+            <h6>Legal</h6>
+            <ul class="footer__menu-lists">
+              <li class="footer__menu-lists__items">About Us</li>
+              <li class="footer__menu-lists__items">Carrier</li>
+              <li class="footer__menu-lists__items">We are hiring</li>
+              <li class="footer__menu-lists__items">Blog</li>
+            </ul>
+          </div>
+          <div class="footer__menu-items__wrapper">
+            <h6>Features</h6>
+            <ul class="footer__menu-lists">
+              <li class="footer__menu-lists__items">Business Marketing</li>
+              <li class="footer__menu-lists__items">User Analytic</li>
+              <li class="footer__menu-lists__items">Live Chat</li>
+              <li class="footer__menu-lists__items">Unlimited Support</li>
+            </ul>
+          </div>
+          <div class="footer__menu-items__wrapper">
+            <h6>Resources</h6>
+            <ul class="footer__menu-lists">
+              <li class="footer__menu-lists__items">IOS & Android</li>
+              <li class="footer__menu-lists__items">Watch a Demo</li>
+              <li class="footer__menu-lists__items">Customers</li>
+              <li class="footer__menu-lists__items">API</li>
+            </ul>
+          </div>
+          <div class="footer__menu-items__wrapper">
+            <h6>Get in Touch</h6>
+            <form class="footer__menu-form">
+              <input
+                type="email"
+                placeholder="Your Email"
+                class="footer__menu-form__input"
+              />
+              <button type="button" class="footer__menu-form__button">
+                Subscribe
+              </button>
+            </form>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Voluptatem quaerat, illo
+            </p>
+          </div>
+        </div>
+        <p class="disclaimer">Made With Precision By VTD All Rights Reserved</p>
+      </footer>
+      <!-- End Footer -->
     </main>
-    
+
     <script src="/public/main.js"></script>
   </body>
 </html>
