Added pricing and styled

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
               </p>
             </div>
           </div>
-          <div class="services__card-wrapper">.
-            
+          <div class="services__card-wrapper">            
             <img src="/public/images/users.png" alt="Services Icon" />
             <div class="services__card-text__wrapper">
               <h1 class="services__card-header">Raising Funds</h1>
@@ -194,19 +193,67 @@
       <!-- Pricing Start -->
       <section class="pricing__wrapper">
         <div class="pricing__heading-wrapper">
-          <h2 class="pricing__header">Pricing</h2>
+          <h2 class="pricing__heading">Pricing</h2>
           <p class="pricing__text">Problems trying to resolve the conflict between 
             the two major realms of Classical physics: Newtonian mechanics </p>
         </div>
         <div class="pricing__cards-wrapper">
           <div class="pricing__card-wrapper">
-            <span class="pricing__card-badge">new</span>
             <h3 class="pricing__card-heading">FREE</h3>
             <p class="pricing__card-description">Organize accross all apps by hand</p>
-            <h2 class="pricing__card-price">0$</h2>
+            <h4 class="pricing__card-price">0$</h4>
             <p class="pricing__card-price__tag">Per Month</p>
             <button type="button" class="pricing__card-button">Try it for free</button>
-            <ul class="pricing__features__wrapper">
+            <ul class="pricing__features-wrapper">
+                <li class="pricing__features">
+                  Ulimited product updates
+                </li>
+                <li class="pricing__features">
+                 Unlimited Product updates
+                </li>
+                <li class="pricing__features">
+                  Ulimited product updates
+                </li>
+                <li class="pricing__features">
+                  1GB Cloud Storage
+                </li>
+                <li class="pricing__features">
+                  Email and community support
+                </li>
+            </ul>
+          </div>
+          <div class="pricing__card-wrapper">
+            <span class="pricing__card-badge">New</span>
+            <h3 class="pricing__card-heading">Silver</h3>
+            <p class="pricing__card-description">Organize accross all apps by hand</p>
+            <h4 class="pricing__card-price">9.99$</h4>
+            <p class="pricing__card-price__tag">Per Month</p>
+            <button type="button" class="pricing__card-button">Try it for free</button>
+            <ul class="pricing__features-wrapper">
+                <li class="pricing__features">
+                  Ulimited product updates
+                </li>
+                <li class="pricing__features">
+                 Unlimited Product updates
+                </li>
+                <li class="pricing__features">
+                  Ulimited product updates
+                </li>
+                <li class="pricing__features">
+                  1GB Cloud Storage
+                </li>
+                <li class="pricing__features">
+                  Email and community support
+                </li>
+            </ul>
+          </div>
+          <div class="pricing__card-wrapper">
+            <h3 class="pricing__card-heading">GOLD</h3>
+            <p class="pricing__card-description">Organize accross all apps by hand</p>
+            <h4 class="pricing__card-price">19.99$$</h4>
+            <p class="pricing__card-price__tag">Per Month</p>
+            <button type="button" class="pricing__card-button">Try it for free</button>
+            <ul class="pricing__features-wrapper">
                 <li class="pricing__features">
                   Ulimited product updates
                 </li>
