--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           <div class="pricing__card-wrapper">
             <h3 class="pricing__card-heading">GOLD</h3>
             <p class="pricing__card-description">Organize accross all apps by hand</p>
-            <h4 class="pricing__card-price">19.99$$</h4>
+            <h4 class="pricing__card-price">19.99$</h4>
             <p class="pricing__card-price__tag">Per Month</p>
             <button type="button" class="pricing__card-button">Try it for free</button>
             <ul class="pricing__features-wrapper">
