--- a/index.html
+++ b/index.html
@@ -275,6 +275,39 @@
       </section>
       <!-- Pricing End -->
 
+      <!-- Contact us Start -->
+      <section class="contact__wrapper">
+          <div class="contact__header-wrapper">
+            <h1 class="contact__heading">Get In Touch</h1>
+            <p class="contact__text">
+              Problems trying to resolve the conflict between 
+              the two major realms of Classical physics: Newtonian mechanics </p>
+          </div>
+
+          <div class="contact__cards-wrapper">
+            <div class="contact__card-wrapper">
+              <i class="fa-solid fa-phone contact__card-image"></i>
+              <p class="contact__card-email">Georgia.young@example.com</p>
+              <h2 class="contact__card-support">Get Support</h2>
+              <button class="contact__card-button">Submit Request</button>
+            </div>
+            <div class="contact__card-wrapper middle">
+              <i class="fa-solid fa-location-dot contact__card-image"></i>
+              <p class="contact__card-email">Georgia.young@example.com</p>
+              <h2 class="contact__card-support">Get Support</h2>
+              <button class="contact__card-button">Submit Request</button>
+            </div>
+            <div class="contact__card-wrapper">
+              <i class="fa-solid fa-envelope contact__card-image"></i>
+              <p class="contact__card-email">Georgia.young@example.com</p>
+              <h2 class="contact__card-support">Get Support</h2>
+              <button class="contact__card-button">Submit Request</button>
+            </div>
+          </div>
+      </section>
+
+      <!-- Contact us End -->
+
       <!-- Start Footer -->
       <footer>
         <div class="footer__heading">
