--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               </p>
             </div>
           </div>
-          <div class="services__card-wrapper">            
+          <div class="services__card-wrapper">
             <img src="/public/images/users.png" alt="Services Icon" />
             <div class="services__card-text__wrapper">
               <h1 class="services__card-header">Raising Funds</h1>
@@ -190,85 +190,127 @@
 
       <!-- Clients End -->
 
+      <!-- About Us Start-->
+
+      <section class="about__wrapper">
+        <div class="about__heading-wrapper">
+          <h1 class="about__heading">About Us</h1>
+          <p class="about__text">
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
+          </p>
+        </div>
+
+        <div class="about__content-wrapper">
+          <div class="about__video-wrapper">
+            <video width="320" height="240" poster="/public/images/media-bg.png">
+              <source src="/public/images/Video.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+            
+            <i class="fa-solid fa-play"></i>
+          </div>
+
+          <div class="about__video-text__wrapper">
+            <div class="about__video-heading-wrapper">
+              <h2 class="about__video-heading">Most trusted in our field</h2>
+              <p class="about__video-heading-text">
+                Most calendars are designed for teams. Slate is designed for
+                freelancers who want a simple way to plan their schedule.
+              </p>
+            </div>
+
+            <div class="about__video-quote__wrapper">
+              <img src="/public/images/img1.png" alt="Services Icon" />
+              <div class="about__video-quote-text__wrapper">
+                <h3 class="about__video-quote-header">
+                  the quick fox jumps over the lazy dog
+                </h3>
+                <p class="about__video-quote-text">
+                  Things on a very small scale ...
+                </p>
+              </div>
+            </div>
+            <div class="about__video-quote__wrapper">
+              <img src="/public/images/img2.png" alt="Services Icon" />
+              <div class="about__video-quote-text__wrapper">
+                <h3 class="about__video-quote-header">
+                  the quick fox jumps over the lazy dog
+                </h3>
+                <p class="about__video-quote-text">
+                  Things on a very small scale ...
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- About Us End -->
+
       <!-- Pricing Start -->
       <section class="pricing__wrapper">
         <div class="pricing__heading-wrapper">
           <h2 class="pricing__heading">Pricing</h2>
-          <p class="pricing__text">Problems trying to resolve the conflict between 
-            the two major realms of Classical physics: Newtonian mechanics </p>
+          <p class="pricing__text">
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
+          </p>
         </div>
         <div class="pricing__cards-wrapper">
           <div class="pricing__card-wrapper">
             <h3 class="pricing__card-heading">FREE</h3>
-            <p class="pricing__card-description">Organize accross all apps by hand</p>
+            <p class="pricing__card-description">
+              Organize accross all apps by hand
+            </p>
             <h4 class="pricing__card-price">0$</h4>
             <p class="pricing__card-price__tag">Per Month</p>
-            <button type="button" class="pricing__card-button">Try it for free</button>
+            <button type="button" class="pricing__card-button">
+              Try it for free
+            </button>
             <ul class="pricing__features-wrapper">
-                <li class="pricing__features">
-                  Ulimited product updates
-                </li>
-                <li class="pricing__features">
-                 Unlimited Product updates
-                </li>
-                <li class="pricing__features">
-                  Ulimited product updates
-                </li>
-                <li class="pricing__features">
-                  1GB Cloud Storage
-                </li>
-                <li class="pricing__features">
-                  Email and community support
-                </li>
+              <li class="pricing__features">Ulimited product updates</li>
+              <li class="pricing__features">Unlimited Product updates</li>
+              <li class="pricing__features">Ulimited product updates</li>
+              <li class="pricing__features">1GB Cloud Storage</li>
+              <li class="pricing__features">Email and community support</li>
             </ul>
           </div>
           <div class="pricing__card-wrapper">
             <span class="pricing__card-badge">New</span>
             <h3 class="pricing__card-heading">Silver</h3>
-            <p class="pricing__card-description">Organize accross all apps by hand</p>
+            <p class="pricing__card-description">
+              Organize accross all apps by hand
+            </p>
             <h4 class="pricing__card-price">9.99$</h4>
             <p class="pricing__card-price__tag">Per Month</p>
-            <button type="button" class="pricing__card-button">Try it for free</button>
+            <button type="button" class="pricing__card-button">
+              Try it for free
+            </button>
             <ul class="pricing__features-wrapper">
-                <li class="pricing__features">
-                  Ulimited product updates
-                </li>
-                <li class="pricing__features">
-                 Unlimited Product updates
-                </li>
-                <li class="pricing__features">
-                  Ulimited product updates
-                </li>
-                <li class="pricing__features">
-                  1GB Cloud Storage
-                </li>
-                <li class="pricing__features">
-                  Email and community support
-                </li>
+              <li class="pricing__features">Ulimited product updates</li>
+              <li class="pricing__features">Unlimited Product updates</li>
+              <li class="pricing__features">Ulimited product updates</li>
+              <li class="pricing__features">1GB Cloud Storage</li>
+              <li class="pricing__features">Email and community support</li>
             </ul>
           </div>
           <div class="pricing__card-wrapper">
             <h3 class="pricing__card-heading">GOLD</h3>
-            <p class="pricing__card-description">Organize accross all apps by hand</p>
+            <p class="pricing__card-description">
+              Organize accross all apps by hand
+            </p>
             <h4 class="pricing__card-price">19.99$</h4>
             <p class="pricing__card-price__tag">Per Month</p>
-            <button type="button" class="pricing__card-button">Try it for free</button>
+            <button type="button" class="pricing__card-button">
+              Try it for free
+            </button>
             <ul class="pricing__features-wrapper">
-                <li class="pricing__features">
-                  Ulimited product updates
-                </li>
-                <li class="pricing__features">
-                 Unlimited Product updates
-                </li>
-                <li class="pricing__features">
-                  Ulimited product updates
-                </li>
-                <li class="pricing__features">
-                  1GB Cloud Storage
-                </li>
-                <li class="pricing__features">
-                  Email and community support
-                </li>
+              <li class="pricing__features">Ulimited product updates</li>
+              <li class="pricing__features">Unlimited Product updates</li>
+              <li class="pricing__features">Ulimited product updates</li>
+              <li class="pricing__features">1GB Cloud Storage</li>
+              <li class="pricing__features">Email and community support</li>
             </ul>
           </div>
         </div>
@@ -277,33 +319,34 @@
 
       <!-- Contact us Start -->
       <section class="contact__wrapper">
-          <div class="contact__header-wrapper">
-            <h1 class="contact__heading">Get In Touch</h1>
-            <p class="contact__text">
-              Problems trying to resolve the conflict between 
-              the two major realms of Classical physics: Newtonian mechanics </p>
-          </div>
+        <div class="contact__header-wrapper">
+          <h1 class="contact__heading">Get In Touch</h1>
+          <p class="contact__text">
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
+          </p>
+        </div>
 
-          <div class="contact__cards-wrapper">
-            <div class="contact__card-wrapper">
-              <i class="fa-solid fa-phone contact__card-image"></i>
-              <p class="contact__card-email">Georgia.young@example.com</p>
-              <h2 class="contact__card-support">Get Support</h2>
-              <button class="contact__card-button">Submit Request</button>
-            </div>
-            <div class="contact__card-wrapper middle">
-              <i class="fa-solid fa-location-dot contact__card-image"></i>
-              <p class="contact__card-email">Georgia.young@example.com</p>
-              <h2 class="contact__card-support">Get Support</h2>
-              <button class="contact__card-button">Submit Request</button>
-            </div>
-            <div class="contact__card-wrapper">
-              <i class="fa-solid fa-envelope contact__card-image"></i>
-              <p class="contact__card-email">Georgia.young@example.com</p>
-              <h2 class="contact__card-support">Get Support</h2>
-              <button class="contact__card-button">Submit Request</button>
-            </div>
+        <div class="contact__cards-wrapper">
+          <div class="contact__card-wrapper">
+            <i class="fa-solid fa-phone contact__card-image"></i>
+            <p class="contact__card-email">Georgia.young@example.com</p>
+            <h2 class="contact__card-support">Get Support</h2>
+            <button class="contact__card-button">Submit Request</button>
           </div>
+          <div class="contact__card-wrapper middle">
+            <i class="fa-solid fa-location-dot contact__card-image"></i>
+            <p class="contact__card-email">Georgia.young@example.com</p>
+            <h2 class="contact__card-support">Get Support</h2>
+            <button class="contact__card-button">Submit Request</button>
+          </div>
+          <div class="contact__card-wrapper">
+            <i class="fa-solid fa-envelope contact__card-image"></i>
+            <p class="contact__card-email">Georgia.young@example.com</p>
+            <h2 class="contact__card-support">Get Support</h2>
+            <button class="contact__card-button">Submit Request</button>
+          </div>
+        </div>
       </section>
 
       <!-- Contact us End -->
