tweaks, mobile header, play and pause js

--- a/index.html
+++ b/index.html
@@ -47,6 +47,27 @@
         </div>
       </header>
       <!-- End Header -->
+      <!-- Start Mobile Header -->
+      <header>
+        <div class="mobile-header__wrapper">
+          <div class="mobile-header__logo">BrandName</div>
+          <div class="mobile-header__icon-wrapper">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="fa-solid fa-cart-shopping"></i>
+            <i class="fa-solid fa-bars-staggered"></i>
+          </div>
+        </div>
+
+        <nav class="mobile-header__menu-items__wrapper">
+          <ul class="mobile-header__menu-items">
+            <li class="mobile-header__menu-item">Home</li>
+            <li class="mobile-header__menu-item">Product</li>
+            <li class="mobile-header__menu-item">Pricing</li>
+            <li class="mobile-header__menu-item">Contact</li>
+          </ul>
+        </nav>
+      </header>
+      <!-- End Mobile Header -->
 
       <!-- Start Hero -->
       <section class="hero__wrapper">
@@ -203,12 +224,16 @@
 
         <div class="about__content-wrapper">
           <div class="about__video-wrapper">
-            <video width="320" height="240" poster="/public/images/media-bg.png">
+            <video
+              poster="/public/images/media-bg.png"
+            >
               <source src="/public/images/Video.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
-            
+
             <i class="fa-solid fa-play"></i>
+            <i class="fa-solid fa-pause"></i>
+
           </div>
 
           <div class="about__video-text__wrapper">
