--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </header>
       <!-- End Header -->
       <!-- Start Mobile Header -->
-      <header>
+      <header class="mobile-header">
         <div class="mobile-header__wrapper">
           <div class="mobile-header__logo">BrandName</div>
           <div class="mobile-header__icon-wrapper">
